--- a/MLTraining/ml_algs.ipynb
+++ b/MLTraining/ml_algs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "[4961 rows x 133 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
        "[4961 rows x 133 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,9 +818,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'itching': 0, 'skin_rash': 1, 'nodal_skin_eruptions': 2, 'continuous_sneezing': 3, 'shivering': 4, 'chills': 5, 'joint_pain': 6, 'stomach_pain': 7, 'acidity': 8, 'ulcers_on_tongue': 9, 'muscle_wasting': 10, 'vomiting': 11, 'burning_micturition': 12, 'spotting_ urination': 13, 'fatigue': 14, 'weight_gain': 15, 'anxiety': 16, 'cold_hands_and_feets': 17, 'mood_swings': 18, 'weight_loss': 19, 'restlessness': 20, 'lethargy': 21, 'patches_in_throat': 22, 'irregular_sugar_level': 23, 'cough': 24, 'high_fever': 25, 'sunken_eyes': 26, 'breathlessness': 27, 'sweating': 28, 'dehydration': 29, 'indigestion': 30, 'headache': 31, 'yellowish_skin': 32, 'dark_urine': 33, 'nausea': 34, 'loss_of_appetite': 35, 'pain_behind_the_eyes': 36, 'back_pain': 37, 'constipation': 38, 'abdominal_pain': 39, 'diarrhoea': 40, 'mild_fever': 41, 'yellow_urine': 42, 'yellowing_of_eyes': 43, 'acute_liver_failure': 44, 'fluid_overload': 45, 'swelling_of_stomach': 46, 'swelled_lymph_nodes': 47, 'malaise': 48, 'blurred_and_distorted_vision': 49, 'phlegm': 50, 'throat_irritation': 51, 'redness_of_eyes': 52, 'sinus_pressure': 53, 'runny_nose': 54, 'congestion': 55, 'chest_pain': 56, 'weakness_in_limbs': 57, 'fast_heart_rate': 58, 'pain_during_bowel_movements': 59, 'pain_in_anal_region': 60, 'bloody_stool': 61, 'irritation_in_anus': 62, 'neck_pain': 63, 'dizziness': 64, 'cramps': 65, 'bruising': 66, 'obesity': 67, 'swollen_legs': 68, 'swollen_blood_vessels': 69, 'puffy_face_and_eyes': 70, 'enlarged_thyroid': 71, 'brittle_nails': 72, 'swollen_extremeties': 73, 'excessive_hunger': 74, 'extra_marital_contacts': 75, 'drying_and_tingling_lips': 76, 'slurred_speech': 77, 'knee_pain': 78, 'hip_joint_pain': 79, 'muscle_weakness': 80, 'stiff_neck': 81, 'swelling_joints': 82, 'movement_stiffness': 83, 'spinning_movements': 84, 'loss_of_balance': 85, 'unsteadiness': 86, 'weakness_of_one_body_side': 87, 'loss_of_smell': 88, 'bladder_discomfort': 89, 'foul_smell_of urine': 90, 'continuous_feel_of_urine': 91, 'passage_of_gases': 92, 'internal_itching': 93, 'toxic_look_(typhos)': 94, 'depression': 95, 'irritability': 96, 'muscle_pain': 97, 'altered_sensorium': 98, 'red_spots_over_body': 99, 'belly_pain': 100, 'abnormal_menstruation': 101, 'dischromic _patches': 102, 'watering_from_eyes': 103, 'increased_appetite': 104, 'polyuria': 105, 'family_history': 106, 'mucoid_sputum': 107, 'rusty_sputum': 108, 'lack_of_concentration': 109, 'visual_disturbances': 110, 'receiving_blood_transfusion': 111, 'receiving_unsterile_injections': 112, 'coma': 113, 'stomach_bleeding': 114, 'distention_of_abdomen': 115, 'history_of_alcohol_consumption': 116, 'fluid_overload.1': 117, 'blood_in_sputum': 118, 'prominent_veins_on_calf': 119, 'palpitations': 120, 'painful_walking': 121, 'pus_filled_pimples': 122, 'blackheads': 123, 'scurring': 124, 'skin_peeling': 125, 'silver_like_dusting': 126, 'small_dents_in_nails': 127, 'inflammatory_nails': 128, 'blister': 129, 'red_sore_around_nose': 130, 'yellow_crust_ooze': 131}\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -867,7 +874,7 @@
        " 'Vertigo': 40}"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,6 +885,7 @@
     "for item in df.keys().array[:-1]:\n",
     "    symptoms[item] = index\n",
     "    index += 1\n",
+    "print(symptoms)\n",
     "diseases = {}\n",
     "index = 0\n",
     "for item in df['prognosis'].unique():\n",
@@ -888,7 +896,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"symptoms_index_encoding.json\", \"w\") as f:\n",
+    "    json.dump(symptoms, f, indent=4)\n",
+    "\n",
+    "with open(\"diseases_index_encoding.json\", \"w\") as f:\n",
+    "    json.dump(diseases, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,26 +982,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/sebi/Desktop/licenta/MLTraining/venv/lib/python3.13/site-packages/xgboost/core.py:158: UserWarning: [00:27:02] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "/Users/sebi/Desktop/licenta/MLTraining/venv/lib/python3.13/site-packages/xgboost/core.py:158: UserWarning: [18:49:58] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/sebi/Desktop/licenta/MLTraining/venv/lib/python3.13/site-packages/xgboost/core.py:158: UserWarning: [00:27:03] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "/Users/sebi/Desktop/licenta/MLTraining/venv/lib/python3.13/site-packages/xgboost/core.py:158: UserWarning: [18:49:59] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/sebi/Desktop/licenta/MLTraining/venv/lib/python3.13/site-packages/xgboost/core.py:158: UserWarning: [00:27:04] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
-      "Parameters: { \"use_label_encoder\" } are not used.\n",
-      "\n",
-      "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/sebi/Desktop/licenta/MLTraining/venv/lib/python3.13/site-packages/xgboost/core.py:158: UserWarning: [00:27:05] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "/Users/sebi/Desktop/licenta/MLTraining/venv/lib/python3.13/site-packages/xgboost/core.py:158: UserWarning: [18:50:00] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -990,7 +1009,7 @@
        "1.0"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1024,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "model_svc = SVC(kernel='linear', random_state=42)\n",
+    "multioutput_model = MultiOutputClassifier(model_svc)\n",
+    "\n",
+    "multioutput_model.fit(X_Train, Y_Train)\n",
+    "\n",
+    "Y_pred_svc = multioutput_model.predict(X_Test)\n",
+    "accuracy_score(Y_Test, Y_pred_svc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "model_mlp = MLPClassifier(hidden_layer_sizes=(100,), max_iter=1000, random_state=42)\n",
+    "multi_model_mlp = MultiOutputClassifier(model_mlp)\n",
+    "\n",
+    "multi_model_mlp.fit(X_Train, Y_Train)\n",
+    "Y_pred_mlp = multi_model_mlp.predict(X_Test)\n",
+    "accuracy_score(Y_Test, Y_pred_mlp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3731, 132)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_Train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1024,6 +1116,38 @@
     "print(f\"Hamming Loss: {hamming_loss(Y_Test, Y_Pred):.4f}\")\n",
     "print(f\"F1 Score (Micro): {f1_score(Y_Test, Y_Pred, average='micro'):.4f}\")\n",
     "print(f\"F1 Score (Macro): {f1_score(Y_Test, Y_Pred, average='macro'):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['svdPrognosisModel.joblib']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joblib import dump\n",
+    "\n",
+    "dump(model, \"xgbPrognosisModel.joblib\")\n",
+    "dump(multioutput_model, \"svdPrognosisModel.joblib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dump(multi_model_mlp, \"mlpPrognosisModel.joblib\")"
    ]
   }
  ],
