implemented differential diagnosis and pathology diagnosis on big dataset, stick further with pathology, differential is awful

--- a/MLTraining/big_dataset/preprocess_data.ipynb
+++ b/MLTraining/big_dataset/preprocess_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "4797c284",
    "metadata": {},
    "outputs": [],
@@ -15,20 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "ea316587",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['proccessed_dataset',\n",
-       " '.DS_Store',\n",
+       "['.DS_Store',\n",
        " 'preprocess_data.ipynb',\n",
-       " 'huggingface_dataset']"
+       " 'huggingface_dataset',\n",
+       " 'ss.zip',\n",
+       " 'plug_and_play_nn.ipynb',\n",
+       " 'preprocessed_dataset']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "2cbbdb78",
    "metadata": {},
    "outputs": [],
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "791e2f46",
    "metadata": {},
    "outputs": [],
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "96be71d1",
    "metadata": {},
    "outputs": [],
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "3a564ef5",
    "metadata": {},
    "outputs": [
@@ -129,7 +131,7 @@
        " 'Pericarditis']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "92243946",
    "metadata": {},
    "outputs": [],
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "id": "7f8e8e2c",
    "metadata": {},
    "outputs": [],
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "id": "3ae79e5b",
    "metadata": {},
    "outputs": [
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "id": "dfdd5c93",
    "metadata": {},
    "outputs": [],
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "id": "184427df",
    "metadata": {},
    "outputs": [],
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "id": "46a9849e",
    "metadata": {},
    "outputs": [],
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "id": "68d5dd0c",
    "metadata": {},
    "outputs": [],
@@ -231,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "id": "0b90620d",
    "metadata": {},
    "outputs": [],
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 45,
    "id": "085614ca",
    "metadata": {},
    "outputs": [],
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 46,
    "id": "c4a78ed8",
    "metadata": {},
    "outputs": [
@@ -261,7 +263,7 @@
        "1025602"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 47,
    "id": "4bc76a88",
    "metadata": {},
    "outputs": [
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 48,
    "id": "a9d6b94d",
    "metadata": {},
    "outputs": [],
@@ -305,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "id": "fff9e575",
    "metadata": {},
    "outputs": [],
@@ -346,7 +348,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
+   "id": "5b4612d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_to_dict(dataframe, dictionary):\n",
+    "    for index, row in dataframe.iterrows():\n",
+    "        dict_record = {}\n",
+    "        dict_record['AGE'] = row['AGE']\n",
+    "        dict_record['SEX'] = row['SEX']\n",
+    "        evidences_string = row['EVIDENCES']\n",
+    "        evidences_parts = ast.literal_eval(evidences_string)\n",
+    "        differential_diagnosis_string = row['PATHOLOGY']\n",
+    "        # differential_diagnosis_parts = ast.literal_eval(differential_diagnosis_string)\n",
+    "        for evidence in evidences_parts:\n",
+    "            dict_record[evidence] = 1\n",
+    "        for evidence in set_evidences:\n",
+    "            if evidence not in dict_record:\n",
+    "                dict_record[evidence] = 0\n",
+    "        dict_record[differential_diagnosis_string] = 1\n",
+    "        for diagnosis in set_conditions:\n",
+    "            if diagnosis not in dict_record:\n",
+    "                dict_record[diagnosis] = 0\n",
+    "        for key, val in dict_record.items():\n",
+    "            dictionary[key].append(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "eeca23f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convert_to_dict(df, dict_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "9db3d619",
    "metadata": {},
    "outputs": [],
@@ -361,12 +402,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_preproccessed.to_csv(\"preproccessed_dataset/preprocessed_train.csv\")"
+    "df_preproccessed.to_csv(\"preprocessed_dataset/preprocessed_train.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "id": "f64c2f7e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "id": "3d0e15d5",
    "metadata": {},
    "outputs": [],
@@ -388,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "id": "2279d612",
    "metadata": {},
    "outputs": [],
@@ -398,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 64,
    "id": "623186e8",
    "metadata": {},
    "outputs": [],
@@ -408,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 65,
    "id": "5e62ca10",
    "metadata": {},
    "outputs": [
@@ -430,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 66,
    "id": "fccfb71c",
    "metadata": {},
    "outputs": [],
@@ -441,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "id": "5be28b29",
    "metadata": {},
    "outputs": [],
@@ -451,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "id": "d74ef15c",
    "metadata": {},
    "outputs": [],
@@ -461,12 +502,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "9088f86c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test_preproccessed.to_csv(\"preproccessed_dataset/preprocessed_train.csv\")"
+    "df_test_preproccessed.to_csv(\"preprocessed_dataset/preprocessed_test_nondiff.csv\")"
    ]
   },
   {
