--- a/MLTraining/big_dataset/nn_diff.ipynb
+++ b/MLTraining/big_dataset/nn_diff.ipynb
@@ -2,57 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "60594807",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import MinMaxScaler\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "4355a3b7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TensorFlow version: 2.16.2\n",
-      "Num GPUs Available:  1\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "\n",
-    "print(\"TensorFlow version:\", tf.__version__)\n",
-    "print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0d723763",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')\n",
-      "PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')\n"
-     ]
-    }
-   ],
-   "source": [
-    "devices = tf.config.list_physical_devices()\n",
-    "for d in devices:\n",
-    "    print(d)"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import json"
    ]
   },
   {
@@ -84,16 +42,6 @@
    "source": [
     "min_max_scaler = MinMaxScaler()\n",
     "df['AGE'] = min_max_scaler.fit_transform(df[['AGE']])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "e50d9fa7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json"
    ]
   },
   {
@@ -292,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "24de3662",
    "metadata": {},
    "outputs": [],
@@ -300,23 +248,9 @@
     "input_dim = len(features)\n",
     "output_dim = len(labels)\n",
     "\n",
-    "# model = models.Sequential([\n",
-    "#     layers.Input(shape=(input_dim,), name='Input'),\n",
-    "#     layers.Dense(512, activation='relu', \n",
-    "#                  kernel_regularizer=regularizers.l2(0.01)),\n",
-    "#     layers.Dropout(0.3),\n",
-    "#     layers.Dense(256, activation='relu', \n",
-    "#                  kernel_regularizer=regularizers.l2(0.01)),\n",
-    "#     layers.Dropout(0.3),\n",
-    "#     layers.Dense(128, activation='relu', \n",
-    "#                  kernel_regularizer=regularizers.l2(0.01)),\n",
-    "#     layers.Dense(output_dim, activation='softmax', name='Output')\n",
-    "# ])\n",
-    "\n",
     "model = models.Sequential([\n",
     "    layers.Input(shape=(input_dim,), name='Input'),\n",
     "    \n",
-    "    # Straturi ascunse (de tip DNN)\n",
     "    layers.Dense(256, activation='relu'),\n",
     "    layers.BatchNormalization(),\n",
     "    layers.Dropout(0.3),\n",
@@ -333,7 +267,6 @@
     "    layers.BatchNormalization(),\n",
     "    layers.Dropout(0.3),\n",
     "    \n",
-    "    # Stratul de ieșire\n",
     "    layers.Dense(output_dim, activation='softmax', name='Output')\n",
     "])"
    ]
