--- a/MLTraining/big_dataset/preprocess_data.ipynb
+++ b/MLTraining/big_dataset/preprocess_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "id": "4797c284",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "id": "ea316587",
    "metadata": {},
    "outputs": [
@@ -23,6 +23,7 @@
      "data": {
       "text/plain": [
        "['.DS_Store',\n",
+       " 'pathology_model.ipynb',\n",
        " 'preprocess_data.ipynb',\n",
        " 'huggingface_dataset',\n",
        " 'ss.zip',\n",
@@ -30,7 +31,7 @@
        " 'preprocessed_dataset']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 72,
    "id": "2cbbdb78",
    "metadata": {},
    "outputs": [],
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 73,
    "id": "791e2f46",
    "metadata": {},
    "outputs": [],
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 74,
    "id": "96be71d1",
    "metadata": {},
    "outputs": [],
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
    "id": "3a564ef5",
    "metadata": {},
    "outputs": [
@@ -131,7 +132,7 @@
        " 'Pericarditis']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 76,
    "id": "92243946",
    "metadata": {},
    "outputs": [],
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 77,
    "id": "7f8e8e2c",
    "metadata": {},
    "outputs": [],
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 78,
    "id": "3ae79e5b",
    "metadata": {},
    "outputs": [
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 79,
    "id": "dfdd5c93",
    "metadata": {},
    "outputs": [],
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 80,
    "id": "184427df",
    "metadata": {},
    "outputs": [],
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "id": "46a9849e",
    "metadata": {},
    "outputs": [],
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 82,
    "id": "68d5dd0c",
    "metadata": {},
    "outputs": [],
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 83,
    "id": "0b90620d",
    "metadata": {},
    "outputs": [],
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 84,
    "id": "085614ca",
    "metadata": {},
    "outputs": [],
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 85,
    "id": "c4a78ed8",
    "metadata": {},
    "outputs": [
@@ -263,7 +264,7 @@
        "1025602"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 86,
    "id": "4bc76a88",
    "metadata": {},
    "outputs": [
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 87,
    "id": "a9d6b94d",
    "metadata": {},
    "outputs": [],
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 88,
    "id": "fff9e575",
    "metadata": {},
    "outputs": [],
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 89,
    "id": "5b4612d3",
    "metadata": {},
    "outputs": [],
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 90,
    "id": "eeca23f9",
    "metadata": {},
    "outputs": [],
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 91,
    "id": "9db3d619",
    "metadata": {},
    "outputs": [],
@@ -397,12 +398,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "5bfdee68",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_preproccessed.to_csv(\"preprocessed_dataset/preprocessed_train.csv\")"
+    "df_preproccessed.to_csv(\"preprocessed_dataset/preprocessed_train_nondiff.csv\")"
    ]
   },
   {
