add data preprocessor for non differential script

--- a/MLTraining/big_dataset/preprocess_data_nondiff.ipynb
+++ b/MLTraining/big_dataset/preprocess_data_nondiff.ipynb
@@ -9,33 +9,30 @@
    "source": [
     "import pandas as pd\n",
     "import json\n",
-    "import numpy\n",
     "import ast"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0544069",
+   "id": "5b4612d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_to_dict(dataframe, dictionary, set_evidences, set_conditions):\n",
+    "def convert_to_dict_non_diff(dataframe, dictionary, set_evidences, set_conditions):\n",
     "    for index, row in dataframe.iterrows():\n",
     "        dict_record = {}\n",
     "        dict_record['AGE'] = row['AGE']\n",
     "        dict_record['SEX'] = row['SEX']\n",
     "        evidences_string = row['EVIDENCES']\n",
     "        evidences_parts = ast.literal_eval(evidences_string)\n",
-    "        differential_diagnosis_string = row['DIFFERENTIAL_DIAGNOSIS']\n",
-    "        differential_diagnosis_parts = ast.literal_eval(differential_diagnosis_string)\n",
+    "        differential_diagnosis_string = row['PATHOLOGY']\n",
     "        for evidence in evidences_parts:\n",
     "            dict_record[evidence] = 1\n",
     "        for evidence in set_evidences:\n",
     "            if evidence not in dict_record:\n",
     "                dict_record[evidence] = 0\n",
-    "        for diagnosis_prob in differential_diagnosis_parts:\n",
-    "            dict_record[diagnosis_prob[0]] = diagnosis_prob[1]\n",
+    "        dict_record[differential_diagnosis_string] = 1\n",
     "        for diagnosis in set_conditions:\n",
     "            if diagnosis not in dict_record:\n",
     "                dict_record[diagnosis] = 0\n",
@@ -122,7 +119,7 @@
     "df = pd.read_csv(\"huggingface_dataset/ddxplus/train.csv\")\n",
     "df['AGE'] = df['AGE'].fillna(df['AGE'].median())\n",
     "df['SEX'] = df['SEX'].fillna(df['SEX'].mode()[0])\n",
-    "convert_to_dict(df, dict_data, set_evidences, set_conditions)"
+    "convert_to_dict_non_diff(df, dict_data, set_evidences, set_conditions)"
    ]
   },
   {
@@ -133,7 +130,7 @@
    "outputs": [],
    "source": [
     "df_preproccessed = pd.DataFrame(dict_data)\n",
-    "df_preproccessed.to_csv(\"preprocessed_dataset/preprocessed_train.csv\")"
+    "df_preproccessed.to_csv(\"preprocessed_dataset/preprocessed_train_non_diff.csv\")"
    ]
   },
   {
@@ -160,7 +157,7 @@
     "df_test = pd.read_csv(\"huggingface_dataset/ddxplus/test.csv\")\n",
     "df_test['AGE'] = df_test['AGE'].fillna(df_test['AGE'].median())\n",
     "df_test['SEX'] = df_test['SEX'].fillna(df_test['SEX'].mode()[0])\n",
-    "convert_to_dict(df_test, dict_data_test, set_evidences, set_conditions)"
+    "convert_to_dict_non_diff(df_test, dict_data_test, set_evidences, set_conditions)"
    ]
   },
   {
@@ -171,7 +168,7 @@
    "outputs": [],
    "source": [
     "df_test_preproccessed = pd.DataFrame(dict_data_test)\n",
-    "df_test_preproccessed.to_csv(\"preprocessed_dataset/preprocessed_test.csv\")"
+    "df_test_preproccessed.to_csv(\"preprocessed_dataset/preprocessed_test_nondiff.csv\")"
    ]
   },
   {
@@ -198,7 +195,7 @@
     "df_validate = pd.read_csv(\"huggingface_dataset/ddxplus/validate.csv\")\n",
     "df_validate['AGE'] = df_validate['AGE'].fillna(df_validate['AGE'].median())\n",
     "df_validate['SEX'] = df_validate['SEX'].fillna(df_validate['SEX'].mode()[0])\n",
-    "convert_to_dict(df_validate, dict_data_validate, set_evidences, set_conditions)"
+    "convert_to_dict_non_diff(df_validate, dict_data_validate, set_evidences, set_conditions)"
    ]
   },
   {
@@ -209,7 +206,7 @@
    "outputs": [],
    "source": [
     "df_validate_preproccessed = pd.DataFrame(dict_data_validate)\n",
-    "df_validate_preproccessed.to_csv(\"preproccessed_dataset/preprocessed_validate.csv\")"
+    "df_validate_preproccessed.to_csv(\"preproccessed_dataset/preprocessed_validate_non_diff.csv\")"
    ]
   }
  ],
