correct ML pred

--- a/NLP/basic_premium_nlp/vsm/vsm.ipynb
+++ b/NLP/basic_premium_nlp/vsm/vsm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "[132 rows x 31 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,14 +703,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mj/9j67468n7s90t742b29r6zr80000gn/T/ipykernel_75474/613525285.py:6: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "/var/folders/mj/9j67468n7s90t742b29r6zr80000gn/T/ipykernel_91410/613525285.py:6: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -1275,7 +1275,7 @@
        "[132 rows x 31 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1360,14 +1360,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mj/9j67468n7s90t742b29r6zr80000gn/T/ipykernel_75474/624149202.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "/var/folders/mj/9j67468n7s90t742b29r6zr80000gn/T/ipykernel_91410/624149202.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  vectorized_symptoms_dict = {row[len(row) - 1]: (get_vectorized_symptom(row[:-1].to_list(), model)) for _, row in df.iterrows()}\n"
      ]
     },
@@ -6384,7 +6384,7 @@
        "        -0.07795399, -0.13184464,  0.0311002 , -0.06142303,  0.06373635,\n",
        "         0.02391925,  0.07329536, -0.06205268,  0.01338067, -0.09167472,\n",
        "         0.01280233, -0.02017256, -0.04685269,  0.05923703,  0.01170512]),\n",
-       " 'swollen_extremities': array([ 0.03765499,  0.07762776, -0.04839117,  0.01126506, -0.18989957,\n",
+       " 'swollen_extremeties': array([ 0.03765499,  0.07762776, -0.04839117,  0.01126506, -0.18989957,\n",
        "         0.07924671,  0.04963655, -0.20548496,  0.02225145,  0.04153825,\n",
        "        -0.06254307, -0.10814285,  0.03578119,  0.08210805,  0.00816899,\n",
        "        -0.04341463, -0.0198117 ,  0.08851279, -0.03419125, -0.0271587 ,\n",
@@ -10181,7 +10181,7 @@
        "         0.05544788,  0.04626309, -0.0734662 ,  0.01146009,  0.10710564])}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10193,7 +10193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10202,7 +10202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10211,7 +10211,7 @@
        "0.8156006163052975"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10222,7 +10222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10236,7 +10236,7 @@
    ],
    "source": [
     "cosine_similarity(vectorized_symptoms_dict['anxiety'], get_vectorized_symptom(['i feel very anxious', 'i am scared in public', 'i have a strong feeling of anxiety'], model))\n",
-    "test_vector = get_vectorized_symptom([preprocess_description('i observed a large blood content in my sputum', wdl, ps)], model)\n",
+    "test_vector = get_vectorized_symptom([preprocess_description('i hav unprotected ', wdl, ps)], model)\n",
     "for key, value in vectorized_symptoms_dict.items():\n",
     "    if cosine_similarity(test_vector, value) > 0.8:\n",
     "        print(key)\n",
@@ -10245,7 +10245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
